--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <img src="Imagenes/logo.png" alt="Logo de la empresa"><br>
+        <img src="Imagenes/Logo.png" alt="Logo de la empresa"><br>
         &copy; 2025 Grupo Gamel. Todos los derechos Reservados.
     </footer>
 </body>
