--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Bienvenido a Nuestra Empresa</h1>
         <p><strong>¿Quiénes somos?</strong></p>
         <p>GAMEL es una empresa especializada en el sector metalúrgico con
-            experiencia en el reciclaje de desechos metálicos para su reutilización. El
+            experiencia en el reciclaje de desechos metálicos para su reutilización. En
             diversas áreas, incluyendo operadores, ingenieros y personal
             administrativo, garantizando la ejecución exitosa de los desmantelamientos.</p>
 
