--- a/Pagina.html
+++ b/Pagina.html
@@ -92,7 +92,7 @@
     </section>
 
 <section id="contacto">
-  <img src="imagenes/Imagen2.jpg" alt="Ejemplo" />
+  <img src="Imagenes/Imagen2.jpg"/>
 
   <div>
     <p><strong>Contactos:</strong></p>
@@ -125,4 +125,5 @@
         &copy; 2025 Grupo Gamel. Todos los derechos Reservados.
     </footer>
 </body>
+
 </html>
