--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
 
 <section id="contacto">
-  <img src="imagenes/Imagen2.jpg" alt="Ejemplo" />
+  <img src="Imagenes/Imagen2.jpg"/>
 
   <div>
     <p><strong>Contactos:</strong></p>
@@ -126,3 +126,4 @@
     </footer>
 </body>
 </html>
+
